# Slayer

./: .env.example  .gitignore  CLAUDE.md  DEBUG_SUMMARY.md  README.md  alembic.ini  package-lock.json  pyproject.toml  schemas.py  schemas_spec.md
.github/: PULL_REQUEST_TEMPLATE.md
.streamlit/: config.toml
company_research/: __main__.py  cli.py  config.py  llm_client.py  researcher.py  source_base.py
company_research/sources/: corp_info.py  financial_info.py  naver_news.py
data/: README.md
docs/: data-schema.md  progress-hyunji-2nd-mvp.md  progress-jiho-0401.md  schema-discussion-response-jiho.md
docs/pipelines/: interview_questions.md  jd_parser_multi_role.md
scripts/: test_interview_generator.py
slayer/: __init__.py  __main__.py  cli.py  config.py  llm.py  llm_client.py  parser_base.py  registry.py  schemas.py  scraper.py
slayer/agents/: shared_tools.py
slayer/agents/company_research/: __init__.py  agent.py  llm_client.py  researcher.py  source_base.py  tools.py
slayer/agents/cover_letter/: __init__.py  agent.py  tools.py
slayer/agents/resume_optimizer/: __init__.py  agent.py  tools.py
slayer/api/: main.py
slayer/db/: models.py  repository.py  session.py
slayer/parsers/: __init__.py  jobkorea.py  remember.py  saramin.py  wanted.py
slayer/services/: llm_client.py  status.py
slayer/ui/: app.py  auth.py  components.py  events.py  fixtures.py  styles.py
supabase/migrations/: 001_create_user_google_tokens.sql
test_data/: README.md
test_data/resumes/: frontend_박민재.md
tests/agents/: conftest.py  test_company_research.py  test_cover_letter.py  test_e2e_smoke.py  test_resume_optimizer.py  test_retry.py  test_tools.py
tests/api/: test_auth.py  test_pipelines.py
tests/pipelines/: test_gmail_classifier.py  test_jd_parser.py  test_jd_resume_matcher.py  test_resume_parser.py  test_resume_parser_integration.py  test_section_extractor.py
web/: index.html  package-lock.json  package.json
web/src/: App.css  App.tsx  Login.tsx  index.css
(+81 files in other folders)
